<resources>
    <string name="app_name">Lab3</string>
    <string name="_0">0</string>
    <string name="punkty">Punkty</string>
    <string name="zgaduj">Zgaduj</string>
    <string name="wpisz_liczb">Wpisz liczbę!</string>
    <string name="gra_losuj_ca">Gra losująca</string>
    <string name="title_activity_announcement">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nick">Nick</string>
    <string name="password">Password</string>
    <string name="register">Register?</string>
    <string name="username">Username</string>
    <string name="back">Back</string>
</resources>